--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,7 +26,7 @@
             "runtimeExecutable": "${execPath}",
             "args": [
                 "--extensionDevelopmentPath=${workspaceFolder}",
-                "--extensionDevelopmentPath=${workspaceFolder}/../vscode-azurestorage",
+                "--extensionDevelopmentPath=${workspaceFolder}/../vscode-azurevirtualmachines",
             ],
             "outFiles": [
                 "${workspaceFolder}/out/**/*.js"
